# streamlit-dashboard-hearth-disease

./: .gitignore  Dockerfile  Dockerfile.dev  README.md  deploy.sh  docker-compose.yml  main.tf  pyproject.toml  requirements.txt
ansible/: playbook.yml
data/interim/: db.db
data/processed/: db_processed.db
notebooks/: analysis.ipynb
src/: main.py
src/dashboard/components/: filters.py  metrics.py  plots.py  utils.py
src/dashboard/pages/: analysis.py  data.py  overview.py
utils/: csv_to_db.py  data_info.py  process_data.py
